# wireshark-spdm

./: readme.md
spdm/: CMakeLists.txt  Spdm.h  config.txt  packet-spdm.c
